# knowrob

./: .gitignore  CMakeLists.txt  LICENSE  README.md  knowrob.pc.in  package.xml  python-kb.ipynb
.github/workflows/: main.yml
binder/: Dockerfile  entrypoint.sh
build_isolated/: catkin_make_isolated.cache
dev/: ____init_____8py.html  ____init_____8py_source.html  _answer_8cpp.html  _answer_8cpp.js  _answer_8cpp__incl.map  _answer_8cpp__incl.md5  _answer_8cpp_source.html  _answer_8h.html  _answer_8h__dep__incl.map  _answer_8h__dep__incl.md5  _answer_8h__incl.map  _answer_8h__incl.md5  _answer_8h_source.html  _answer_dont_know_8cpp.html  _answer_dont_know_8cpp.js  _answer_dont_know_8cpp__incl.map  _answer_dont_know_8cpp__incl.md5  _answer_dont_know_8cpp_source.html  _answer_dont_know_8h.html  _answer_dont_know_8h__dep__incl.map  _answer_dont_know_8h__dep__incl.md5  _answer_dont_know_8h__incl.map  _answer_dont_know_8h__incl.md5  _answer_dont_know_8h_source.html  _answer_merger_8cpp.html  _answer_merger_8cpp__incl.map  _answer_merger_8cpp__incl.md5  _answer_merger_8cpp_source.html  _answer_merger_8h.html  _answer_merger_8h__incl.map  _answer_merger_8h__incl.md5  _answer_merger_8h_source.html  _answer_no_8cpp.html  _answer_no_8cpp.js  _answer_no_8cpp__incl.map  _answer_no_8cpp__incl.md5  _answer_no_8cpp_source.html  _answer_no_8h.html  _answer_no_8h__dep__incl.map  _answer_no_8h__dep__incl.md5  (+2604 more)
dev/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+175 more)
devel_isolated/: _setup_util.py  setup.sh
doc/: Releasing.md  doxyfile.in
include/knowrob/: DataSource.h  KnowRobError.h  KnowledgeBase.h  Logger.h  Printable.h  PropertyTree.h  ThreadPool.h  TimeInterval.h  TimePoint.h  URI.h  knowrob.h
include/knowrob/formulas/: Bottom.h  CompoundFormula.h  DependencyGraph.h  FirstOrderLiteral.h  Formula.h  FramedPredicate.h  ModalOperator.h  Predicate.h  PredicateIndicator.h  SimpleConjunction.h  Top.h
include/knowrob/integration/: InterfaceUtils.h
include/knowrob/ontologies/: DataSource.h  DataSourceHandler.h  GraphTransformation.h  GraphTransformationRule.h  OntologyFile.h  OntologyParser.h  OntologySource.h
include/knowrob/plugins/: NamedPlugin.h  (+4 more)
jupyter/: intro.ipynb  notebook_test_util.py  python-kb.ipynb
master/model/: SOMA.html
owl/: URDF.owl  knowrob.owl  srdl2-cap.owl  srdl2-comp.owl  srdl2.owl
owl/robots/: PR2.owl
owl/test/: parser-test.owl
settings/: mongolog.json  prolog.json
src/: DataSource.cpp  DataSourceHandler.cpp  KnowRobError.cpp  KnowledgeBase.cpp  Logger.cpp  PropertyTree.cpp  ThreadPool.cpp  TimeInterval.cpp  TimePoint.cpp  URI.cpp  __init__.pl  knowrob.cpp  terminal.cpp
src/bullet/: __init__.pl  bullet2pl.h  bullet_presentation.pl  bullet_presentation.rviz  bullet_reasoner.pl  bullet_reasoner.plt  bullettest.cpp  bullettest.pl  bullettest.plt  knowrobBulletWindow.cpp  knowrobBulletWindow.h  meshImporter.cpp  meshImporter.h
src/formulas/: Bottom.cpp  Conjunction.cpp  DependencyGraph.cpp  FirstOrderLiteral.cpp  Formula.cpp  Predicate.cpp  PredicateIndicator.cpp  README.md  SimpleConjunction.cpp  Top.cpp
src/integration/: InterfaceUtils.cpp
src/ontologies/: DataSource.cpp  DataSourceHandler.cpp  GraphRestructuring.cpp  OntologyFile.cpp  README.md
src/queries/: Answer.cpp  AnswerDontKnow.cpp  AnswerNo.cpp  AnswerYes.cpp  ConjunctiveBroadcaster.cpp  ConjunctiveQuery.cpp  DisjunctiveBroadcaster.cpp  ModalStage.cpp  NegationStage.cpp  Query.cpp  QueryContext.cpp  QueryParser.cpp  QueryPipeline.cpp  QueryStage.cpp  QueryTree.cpp  README.md  RedundantAnswerFilter.cpp  Token.cpp  TokenBroadcaster.cpp  TokenBuffer.cpp  TokenQueue.cpp  TokenStream.cpp
src/reasoner/: Computable.cpp  DataDrivenReasoner.cpp  Goal.cpp  GoalDrivenReasoner.cpp  RDFGoal.cpp  RDFGoalReasoner.cpp  README.md  Reasoner.cpp  ReasonerEvent.cpp  ReasonerManager.cpp  ReasonerQuery.cpp
src/semweb/: Class.cpp  FramedTriple.cpp  FramedTriplePattern.cpp  GraphBuiltin.cpp  GraphQuery.cpp  GraphRenaming.cpp  GraphRestructuring.cpp  GraphSelector.cpp  GraphSequence.cpp  GraphTerm.cpp  GraphTransformation.cpp  GraphUnion.cpp  ImportHierarchy.cpp  OntologyFile.cpp  OntologyParser.cpp  Perspective.cpp  PrefixRegistry.cpp  Property.cpp  RDFIndicator.cpp  README.md  Resource.cpp  SPARQLQuery.cpp  SPARQLService.cpp  TransformedOntology.cpp  Triple.cpp  TripleContainer.cpp  TripleFormat.cpp  TriplePattern.cpp  Vocabulary.cpp
src/storage/: Observer.cpp  ObserverJob.cpp  ObserverManager.cpp  QueryableStorage.cpp  README.md  ReificationContainer.cpp  ReifiedQuery.cpp  ReifiedTriple.cpp  SPARQLBackend.cpp  Storage.cpp  StorageInterface.cpp  StorageManager.cpp  Transaction.cpp  UnReificationContainer.cpp
src/terms/: Atom.cpp  Atomic.cpp  Bindings.cpp  Blank.cpp  Function.cpp  IRIAtom.cpp  ListTerm.cpp  Numeric.cpp  README.md  String.cpp  Term.cpp  Unifier.cpp  Variable.cpp
src/triples/: FramedTriple.cpp  FramedTriplePattern.cpp  GraphBuiltin.cpp  GraphSelector.cpp  GraphSequence.cpp  GraphTerm.cpp  GraphUnion.cpp  SPARQLQuery.cpp  TripleContainer.cpp
tests/: ConjunctiveBroadcasterTest.cpp  DataSourceTest.cpp  KnowledgeBaseTest.cpp  KnowledgeBaseTest.h  QueryParserTest.cpp  StorageTest.cpp  TokenBroadcasterTest.cpp  gtests.cpp
tests/owl/: PR2.owl  lpn.owl
tests/prolog/: lpn.pl  mongolog_lpn.pl
tests/py/: PythonTests.cpp  PythonTests.h  dummy_reasoner.py  lpn_reasoner.py  test-jupyter.cpp  test-module.cpp  test_boost_python.py  test_jupyter.py
tests/reasoner/: dummy_reasoner.py
tests/settings/: esg.json  kb-test.json  lpn.json  mongolog-lpn.json  pyfactxx.json  python-lpn.json  python-test.json  srdl.json  swrl.json
tutorials/: README.md  notebook_test_util.py
(+226 files in other folders)
